Реактивное программирование [#328881] задание выполнила